packages/next-swc/crates/core/tests/errors/server-actions/server-graph/5/output.js
/* __next_internal_action_entry_do_not_use__  */ import { createActionProxy } from "private-next-rsc-action-proxy";
export * from 'foo';
import ensureServerEntryExports from "private-next-rsc-action-validate";
ensureServerEntryExports([]);
